--- a/styles/main.css
+++ b/styles/main.css
@@ -1,1 +1,9 @@
 @import "tailwindcss";
+
+
+.header-bg{
+    background-image:url("https://res.cloudinary.com/dceyipb6x/image/upload/v1755279231/zoho-bg_takcpt.png");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
+}
